[package]
name = "h3client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
quinn = "0.11"
h3 = { version = "0.6", features = ["client", "quic"] }
http = "0.2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rustls = "0.21"
rustls-pemfile = "1.0"
