[package]
name = "h3client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "io-util"] }
quinn = "0.10"
h3 = "0.0.3"
h3-quinn = "0.0.4"
http = "0.2"
bytes = "1.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rustls = "0.21"
rustls-pemfile = "1.0"