[package]
name = "h3client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "io-util"] }
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
bytes = "1.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1.0"
rustls-pemfile = "2.0"