[package]
name = "h3proxy-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net"] }
quinn = "0.11"
h3 = { version = "0.6", features = ["server", "quic"] }
bytes = "1.4"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
anyhow = "1.0"
tracing = "0.1"
futures = "0.3"