[package]
name = "h3proxy-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "io-util"] }
quinn = "0.10"
h3 = "0.0.3"
h3-quinn = "0.0.4"
bytes = "1.4"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "stream", "tcp"] }
anyhow = "1.0"
tracing = "0.1"
futures = "0.3"
rustls = "0.21"