[package]
name = "h3proxy-lib"
version = "0.1.0"
edition = "2021"

[features]
cronet-backend = ["cronet-rs"]

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "io-util"] }
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
bytes = "1.4"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
tokio-stream = "0.1"
rustls-pki-types = "1.0"
hyper = { version = "1.0", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
anyhow = "1.0"
tracing = "0.1"
futures = "0.3"
rustls = { version = "0.23", features = ["ring"] }
cronet-rs = { git = "https://github.com/sleeyax/cronet-rs", optional = true }

[dev-dependencies]
rcgen = "0.12"
tracing-subscriber = "0.3"
